force-app/main/default/objects/Invoice_Line_Item__c/fields/Invoice_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Item_Number__c</fullName>
    <externalId>true</externalId>
    <label>Invoice Item Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>