force-app/main/default/objects/Invoice_Line_Item__c/fields/Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_No__c</fullName>
    <formula>Invoice__r.Invoice_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice No</label>
    <type>Text</type>
</CustomField>