force-app/main/default/objects/Invoice_Line_Item__c/fields/Pieces__c.field-meta.xml
<CustomField>
    <fullName>Pieces__c</fullName>
    <label>Pieces</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>