force-app/main/default/objects/Invoice_Line_Item__c/fields/Quantity_Meters__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Meters__c</fullName>
    <label>Quantity Meters</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>