force-app/main/default/objects/Invoice_Line_Item__c/fields/Quantity_Tons__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Tons__c</fullName>
    <label>Quantity Tons</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>